--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,4 +2,13 @@
 aptPkgs = ['python3', 'python3-pip']
 
 [phases.install]
-cmds = ['ln -s /usr/bin/python3 /usr/bin/python']
+cmds = [
+    'ln -s /usr/bin/python3 /usr/bin/python',
+    'npm ci'
+]
+
+[phases.build]
+cmds = ['npm run build']
+
+[start]
+cmd = 'npm start'
